# rust-to-c

./: CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.claude/rules/: rust-documentation.md  rust-style.md
core/: Cargo.toml
core/src/: client.rs  error.rs  http.rs  lib.rs  types.rs
core/tests/: integration.rs  test_vectors.rs
ffi/: Cargo.toml  build.rs  cbindgen.toml
ffi/src/: lib.rs  types.rs
mock-server/: Cargo.toml
mock-server/src/: lib.rs  main.rs
mock-server/tests/: api.rs
test-vectors/: create.json  delete.json  get.json  list.json  update.json
