[package]
name = "todo-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "todo_core"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
mock-server = { path = "../mock-server" }
ureq = "3"
