[package]
name = "todo-ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "todo_ffi"
crate-type = ["cdylib", "staticlib"]

[dependencies]
todo-core = { path = "../core" }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"

[build-dependencies]
cbindgen = "0.28"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "net"] }
mock-server = { path = "../mock-server" }
ureq = "3"
